--- a/Semester Project 3/src/semester/project/pkg3/FXMLDocument.fxml
+++ b/Semester Project 3/src/semester/project/pkg3/FXMLDocument.fxml
@@ -1,14 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="semester.project.pkg3.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="semester.project.pkg3.FXMLDocumentController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+        <TabPane layoutX="10.0" layoutY="2.0" prefHeight="600.0" prefWidth="801.0" side="LEFT" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="19.0">
+            <tabs>
+                <Tab text="Opret maskine">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                </Tab>
+                <Tab text="Lav ordre">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                          <RadioButton fx:id="pilsnerRadioBtn" layoutX="158.0" layoutY="132.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="Pilsner">
+                           <toggleGroup>
+                                        <ToggleGroup fx:id="TypeToggleGroup" />
+                           </toggleGroup>
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font>
+                        </RadioButton>
+                          <RadioButton fx:id="wheatRadioBtn" layoutX="20.0" layoutY="60.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="Hvede" textFill="#001f3f" toggleGroup="$TypeToggleGroup">
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font></RadioButton>
+                          <RadioButton fx:id="stoutRadioBtn" layoutX="20.0" layoutY="93.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="Stout" textFill="#001f3f" toggleGroup="$TypeToggleGroup">
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font></RadioButton>
+                          <RadioButton fx:id="aleRadioBtn" layoutX="158.0" layoutY="60.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="Ale" textFill="#001f3f" toggleGroup="$TypeToggleGroup">
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font></RadioButton>
+                          <RadioButton fx:id="alchoholFreeRadioBtn" layoutX="158.0" layoutY="93.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="Alkholfri" textFill="#001f3f" toggleGroup="$TypeToggleGroup">
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font></RadioButton>
+                                <RadioButton fx:id="iPARadioBtn" layoutX="20.0" layoutY="132.0" mnemonicParsing="false" onAction="#TypeBtnHandleAction" prefHeight="17.0" prefWidth="149.0" selected="true" text="IPA" textFill="#001f3f" toggleGroup="$TypeToggleGroup">
+                           <font>
+                              <Font name="Bell MT" size="15.0" />
+                           </font></RadioButton>
+                        <Label fx:id="typeLabel" layoutX="14.0" layoutY="14.0" text="Type">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                                <RadioButton fx:id="danishRadioButton" layoutX="474.0" layoutY="269.0" mnemonicParsing="false" onAction="#DanishHandleBtn" selected="true" text="Dansk">
+                                    <toggleGroup>
+                                        <ToggleGroup fx:id="LanguageToggleGroup" />
+                                    </toggleGroup>
+                                </RadioButton>
+                                <RadioButton fx:id="englishRadioButton" layoutX="607.0" layoutY="268.0" mnemonicParsing="false" onAction="#LanguageHandleBtn" text="English" toggleGroup="$LanguageToggleGroup" />
+                                <RadioButton fx:id="germanRadioButton" layoutX="548.0" layoutY="183.0" mnemonicParsing="false" onAction="#LanguageHandleBtn" text="Deutch" toggleGroup="$LanguageToggleGroup" />
+                                <TextField fx:id="orderAmountTextField" layoutX="138.0" layoutY="228.0" prefHeight="25.0" prefWidth="121.0" />
+                                <Label fx:id="orderAmountLabel" layoutX="27.0" layoutY="227.0" text="Antal" textFill="#001f3f">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Label>
+                                <ChoiceBox fx:id="priorityChoiceBox" layoutX="138.0" layoutY="325.0" prefWidth="150.0" />
+                                <Label fx:id="priorityLabel" layoutX="23.0" layoutY="324.0" prefHeight="27.0" prefWidth="77.0" text="Prioritet">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Label>
+                                <Button fx:id="sendOrderBtn" layoutX="637.0" layoutY="528.0" mnemonicParsing="false" onAction="#SendOrderHandleActionBtn" style="-fx-background-color: white;" text="Send Ordre" textFill="#001f3f">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Button>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+            </tabs>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+        </TabPane>
+      <MenuBar layoutX="-13.0" layoutY="-3.0" prefHeight="28.0" prefWidth="812.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
     </children>
 </AnchorPane>
