--- a/Semester Project 3/src/main/gui/FXMLDocument.fxml
+++ b/Semester Project 3/src/main/gui/FXMLDocument.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -28,7 +29,36 @@
             <tabs>
             <Tab text="Visualization">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="212.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="770.0" />
+                        <Line endX="666.0" startX="-110.0" strokeWidth="3.0" />
+                        <ListView fx:id="factoryListView" layoutX="35.0" layoutY="89.0" prefHeight="100.0" prefWidth="120.0" />
+                        <ListView fx:id="machineListView" layoutX="184.0" layoutY="89.0" prefHeight="100.0" prefWidth="120.0" />
+                        <Label layoutX="71.0" layoutY="69.0" text="Factory" />
+                        <Label layoutX="221.0" layoutY="69.0" text="Machine" />
+                        <Line endX="666.0" layoutX="106.0" layoutY="55.0" startX="-110.0" strokeWidth="3.0" />
+                        <Label layoutX="328.0" layoutY="14.0" prefHeight="32.0" prefWidth="209.0" text="Select">
+                           <font>
+                              <Font size="22.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="568.0" layoutY="46.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../../../../../../Desktop/Unavngivet.png" />
+                           </image>
+                        </ImageView>
+                        <PieChart fx:id="pieChartOEE" layoutX="502.0" layoutY="276.0" prefHeight="223.0" prefWidth="236.0" />
+                        <TextField fx:id="machineStateTextField" layoutX="22.0" layoutY="276.0" prefHeight="44.0" prefWidth="147.0" />
+                        <Label layoutX="39.0" layoutY="240.0" text="Machine State">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="347.0" layoutY="164.0" mnemonicParsing="false" onAction="#loadFactioresBtnHandler" text="Load factories" />
+                        <Label fx:id="oEEpercentLabel" layoutX="110.0" layoutY="410.0" text="Label" />
+                        <Label layoutX="14.0" layoutY="410.0" text="OEE Percent:" />
+                     </children></AnchorPane>
                </content>
             </Tab>
                 <Tab text="Add Machine">
@@ -75,7 +105,7 @@
                               <Font size="18.0" />
                            </font>
                         </Button>
-                        <ImageView fitHeight="205.0" fitWidth="255.0" layoutX="509.0" layoutY="54.0" pickOnBounds="true">
+                        <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="556.0" layoutY="54.0" pickOnBounds="true">
                            <image>
                               <Image url="@../../../../../../Desktop/Unavngivet.png" />
                            </image>
@@ -161,7 +191,7 @@
                            <font>
                               <Font size="18.0" />
                            </font></Label>
-                        <ImageView fitHeight="173.0" fitWidth="187.0" layoutX="584.0" layoutY="66.0" pickOnBounds="true">
+                        <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="570.0" layoutY="66.0" pickOnBounds="true">
                            <image>
                               <Image url="@../../../../../../Desktop/Unavngivet.png" />
                            </image>
