--- a/Semester Project 3/src/main/gui/FXMLDocument.fxml
+++ b/Semester Project 3/src/main/gui/FXMLDocument.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -19,6 +18,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -45,10 +45,9 @@
                         </Label>
                         <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="568.0" layoutY="46.0" pickOnBounds="true">
                            <image>
-                              <Image url="@../../../../../../Desktop/Unavngivet.png" />
+
                            </image>
                         </ImageView>
-                        <PieChart fx:id="pieChartOEE" layoutX="502.0" layoutY="276.0" prefHeight="223.0" prefWidth="236.0" />
                         <TextField fx:id="machineStateTextField" layoutX="22.0" layoutY="276.0" prefHeight="44.0" prefWidth="147.0" />
                         <Label layoutX="39.0" layoutY="240.0" text="Machine State">
                            <font>
@@ -58,6 +57,7 @@
                         <Button layoutX="347.0" layoutY="164.0" mnemonicParsing="false" onAction="#loadFactioresBtnHandler" text="Load factories" />
                         <Label fx:id="oEEpercentLabel" layoutX="110.0" layoutY="410.0" text="Label" />
                         <Label layoutX="14.0" layoutY="410.0" text="OEE Percent:" />
+                        <StackPane fx:id="pieChartPane" layoutX="455.0" layoutY="344.0" prefHeight="150.0" prefWidth="200.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -107,7 +107,7 @@
                         </Button>
                         <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="556.0" layoutY="54.0" pickOnBounds="true">
                            <image>
-                              <Image url="@../../../../../../Desktop/Unavngivet.png" />
+
                            </image>
                         </ImageView>
                         <Label fx:id="typeLabel12" layoutX="339.0" layoutY="14.0" prefHeight="32.0" prefWidth="209.0" text="Login">
@@ -193,7 +193,7 @@
                            </font></Label>
                         <ImageView fitHeight="170.0" fitWidth="200.0" layoutX="570.0" layoutY="66.0" pickOnBounds="true">
                            <image>
-                              <Image url="@../../../../../../Desktop/Unavngivet.png" />
+
                            </image>
                         </ImageView>
                         <Label fx:id="orderSucceededLabel" layoutX="647.0" layoutY="483.0" prefHeight="17.0" prefWidth="89.0" />
